[project]
name = "pipecat-policy-aware-voice-ai-demo"
version = "0.1.0"
description = "Policy-aware Voice AI Customer Support PoC"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,local-smart-turn-v3,runner]==0.0.63",
    "pipecat-ai-cli",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langsmith>=0.1.0",
    "twilio>=8.10.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=7.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This repo is a "flat layout" with multiple top-level modules.
# Explicitly listing them avoids setuptools refusing to build/editable-install.
py-modules = ["bot", "tools", "graph", "policies", "main", "prompts"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]